--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-loading-indicators": "^1.0.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.2",
+    "react-transition-group": "^4.4.5",
     "rsuite": "^5.72.0",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
